@@ -1,6 +1,6 @@
 <?php 
 
-	$widget = $vars["entity"];
+	$widget = elgg_extract("entity", $vars);
 	
 	// get widget settings
 	$count = (int) $widget->blog_count;
@@ -8,14 +8,21 @@
 		$count = 8;
 	}
 
+	// get view mode
+	$view_mode = $widget->view_mode;
+	
 	// backup context and set
-
-	if($widget->view_mode == 'slider') {
-		elgg_push_context("slider");
-		$pop_context = true;
-	} elseif($widget->view_mode != "preview"){
-		elgg_push_context("search");
-		$pop_context = true;
+	$pop_context = false;
+	switch($view_mode){
+		case "slider":
+			elgg_push_context("slider");
+			$pop_context = true;
+			
+			break;
+		case "preview":
+			elgg_push_context("search");
+			$pop_context = true;
+			break;
 	}
 	
 	$options = array(
@@ -32,21 +39,18 @@
 	}
 	
 	if($blogs = elgg_list_entities_from_metadata($options)) {
-		if($widget->view_mode == 'slider') {
+		if($view_mode == 'slider') {
 			$blog_entities = elgg_get_entities_from_metadata($options);
-			
-			echo "<div class='widget_more_wrapper'>";
 			
 			echo "<div id='blog_tools_widget_items_container_" . $widget->getGUID() . "' class='blog_tools_widget_items_container'>"; 
 			echo $blogs;						
 			echo "</div>";
 			
-			echo "<div id='blog_tools_widget_items_navigator_" . $widget->getGUID() . "' class='blog_tools_widget_items_navigator'>";
+			echo "<div id='blog_tools_widget_items_navigator_" . $widget->getGUID() . "' class='elgg-widget-more blog_tools_widget_items_navigator'>";
 			
 			foreach($blog_entities as $key => $blog) {
-				echo "<span rel='blog_tools_blog_" . $blog->getGUID() . "'>" . ($key + 1). "</span>";
+				echo "<span rel='" . $blog->getGUID() . "'>" . ($key + 1). "</span>";
 			}
-			
 			echo "</div>";
 			
 			?>
@@ -62,29 +66,31 @@
 				$(document).ready(function(){
 					$("#blog_tools_widget_items_navigator_<?php echo $widget->getGUID(); ?>>span:first").addClass("active");
 					var active = $("#blog_tools_widget_items_navigator_<?php echo $widget->getGUID(); ?>>span:first").attr("rel");
-					$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?> #" + active).show();
+
+					$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?> #elgg-object-" + active).show();
 	
 					$("#blog_tools_widget_items_navigator_<?php echo $widget->getGUID(); ?> span").click(function(){
 						$("#blog_tools_widget_items_navigator_<?php echo $widget->getGUID(); ?> span.active").removeClass("active");
 						$(this).addClass("active");
 	
-						$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?>>div").hide();
+						$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?> .elgg-item").hide();
 						var active = $(this).attr("rel");
-						$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?> #" + active).show();
+						$("#blog_tools_widget_items_container_<?php echo $widget->getGUID(); ?> #elgg-object-" + active).show();
 					});
 					
 					setInterval (rotateBlogItems<?php echo $widget->getGUID(); ?>, 10000);
 				});
 			</script>
 			<?php
-			echo "</div>"; // end widget_more_wrapper
-			
+						
 		} else {
 			echo $blogs;
 		}
 	} else {
 		echo elgg_echo("blog:noblogs");
 	}
+	
+	// restore context
 	if($pop_context){ 
 		elgg_pop_context();
 	}
