@@ -9,6 +9,7 @@ x.x:
 - fixed: PHP warnings and notices
 - fixed: wrong link in blog widget when used in groups
 - fixed: depricated notice in blog save action
+- fixed: index_blog widget slider mode
 
 2.2 (2012-03-02):
 
